crates/lexer/src/snapshots/lexer__tests__any_radix_0_to_z_but_invalid.snap
---
source: crates/lexer/src/tests.rs
description: 0r=0 0r_1
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Literal(1),
    Ident(1),
    Eq(1),
    Literal(1),
    Whitespace(1),
    Literal(1),
    Ident(3),
]
