crates/lexer/src/snapshots/lexer__tests__any_radix_integer.snap
---
source: crates/lexer/src/tests.rs
description: "0r2'01 0r8'765 0ra123 0rb456"
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Literal(6),
    Whitespace(1),
    Literal(7),
    Whitespace(1),
    Literal(6),
    Whitespace(1),
    Literal(6),
]
