crates/lexer/src/snapshots/lexer__tests__char_and_byte_literals.snap
---
source: crates/lexer/src/tests.rs
description: "'a' b'x' b\"hi\""
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Literal(3),
    Whitespace(1),
    Literal(4),
    Whitespace(1),
    Literal(5),
]
