crates/lexer/src/snapshots/lexer__tests__complex_program.snap
---
source: crates/lexer/src/tests.rs
description: "main: fn() = {\n  x: Int = 42;\n  y: String = \"hello\";\n  // compute\n  result: Int = x + 1;\n  if result > 40 {\n    return result;\n  }\n};"
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Ident(4),
    Colon(1),
    Whitespace(1),
    Ident(2),
    OpenParen(1),
    CloseParen(1),
    Whitespace(1),
    Eq(1),
    Whitespace(1),
    OpenBrace(1),
    Whitespace(3),
    Ident(1),
    Colon(1),
    Whitespace(1),
    Ident(3),
    Whitespace(1),
    Eq(1),
    Whitespace(1),
    Literal(2),
    Semi(1),
    Whitespace(3),
    Ident(1),
    Colon(1),
    Whitespace(1),
    Ident(6),
    Whitespace(1),
    Eq(1),
    Whitespace(1),
    Literal(7),
    Semi(1),
    Whitespace(3),
    Comment(10),
    Whitespace(3),
    Ident(6),
    Colon(1),
    Whitespace(1),
    Ident(3),
    Whitespace(1),
    Eq(1),
    Whitespace(1),
    Ident(1),
    Whitespace(1),
    Plus(1),
    Whitespace(1),
    Literal(1),
    Semi(1),
    Whitespace(3),
    Ident(2),
    Whitespace(1),
    Ident(6),
    Whitespace(1),
    Gt(1),
    Whitespace(1),
    Literal(2),
    Whitespace(1),
    OpenBrace(1),
    Whitespace(5),
    Ident(6),
    Whitespace(1),
    Ident(6),
    Semi(1),
    Whitespace(3),
    CloseBrace(1),
    Whitespace(1),
    CloseBrace(1),
    Semi(1),
]
