crates/lexer/src/snapshots/lexer__tests__empty_input.snap
---
source: crates/lexer/src/tests.rs
description: ""
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[]
