crates/lexer/src/snapshots/lexer__tests__for_loop.snap
---
source: crates/lexer/src/tests.rs
description: "for x in list { print(x); }"
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Ident(3),
    Whitespace(1),
    Ident(1),
    Whitespace(1),
    Ident(2),
    Whitespace(1),
    Ident(4),
    Whitespace(1),
    OpenBrace(1),
    Whitespace(1),
    Ident(5),
    OpenParen(1),
    Ident(1),
    CloseParen(1),
    Semi(1),
    Whitespace(1),
    CloseBrace(1),
]
