crates/lexer/src/snapshots/lexer__tests__hash_bang_comment.snap
---
source: crates/lexer/src/tests.rs
description: "#!/usr/bin/env autolang\nx: Int = 1;"
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Comment(23),
    Whitespace(1),
    Ident(1),
    Colon(1),
    Whitespace(1),
    Ident(3),
    Whitespace(1),
    Eq(1),
    Whitespace(1),
    Literal(1),
    Semi(1),
]
