crates/lexer/src/snapshots/lexer__tests__if_block.snap
---
source: crates/lexer/src/tests.rs
description: "if x > 0 { return x; }"
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Ident(2),
    Whitespace(1),
    Ident(1),
    Whitespace(1),
    Gt(1),
    Whitespace(1),
    Literal(1),
    Whitespace(1),
    OpenBrace(1),
    Whitespace(1),
    Ident(6),
    Whitespace(1),
    Ident(1),
    Semi(1),
    Whitespace(1),
    CloseBrace(1),
]
